Fix icon spacing in dropdown menus

--- a/src/css/elements/dropdowns.scss
+++ b/src/css/elements/dropdowns.scss
@@ -79,6 +79,6 @@ $dropdown-padding-y: $spacer-2;
 
   .bi {
     font-size: 16px;
-    margin-right: $spacer-1;
+    margin-right: $spacer-2;
   }
 }
